<resources>
    <string name="app_name">SpendSmart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="input_sum">Введите сумму</string>
    <string name="choose_category">Выбрать категорию</string>
    <string name="choose_date">Выбрать дату и время</string>
    <string name="wrong_not_chs_date">Дата и время не выбраны</string>
    <string name="income">Доход</string>
    <string name="consumption">Расход</string>
    <string name="save">Сохранить</string>
    <string name="incomes">Доходы </string>
    <string name="consumptions">Расходы </string>
    <string name="add_category">Добавить категорию/и</string>
    <string name="filter_date">Фильтр по дате</string>
    <string name="all">Все</string>
    <string name="total_sum">Общая сумма: 0</string>
    <string name="transaction_history">История транзакций:</string>
    <string name="cost_accounting">Учёт расходов</string>
    <string name="add_transactions">Добавить транзакцию</string>
    <string name="change_theme">Сменить тему</string>
    <string name="category">Категория</string>
    <string name="sum">Сумма</string>
    <string name="date">Дата и время</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="go_register">Перейти к регистрации</string>
    <string name="name">Имя</string>
    <string name="txt_agree">Я согласен с вашими условиями по обработке моих данных</string>
    <string name="continues">Продолжить</string>
    <string name="enter_account">Войти в аккаунт</string>
    <string name="change_language">Сменить язык</string>
    <string name="main">Главная</string>
    <string name="diagram">Диаграмма</string>
    <string name="settings">Настройки</string>
</resources>